<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.personas.Registro">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            android:text="@string/Registro" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/Nombre"
            android:ems="10"
            android:id="@+id/Nombre" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/Apellido"
            android:ems="10"
            android:id="@+id/Apellido" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/Edad"
            android:text="@string/Edad" />

        <CheckBox
            android:text="@string/leer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/chtleer"
            android:checked="true" />

        <CheckBox
            android:text="@string/Bailar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/chtbailar" />

        <CheckBox
            android:text="@string/Programar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/chtprogramar" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">

            <Button
                android:text="@string/registrar"
                android:layout_width="152dp"
                android:layout_height="75dp"
                android:id="@+id/cmdRegistrar"
                android:layout_weight="0.92" />

            <Button
                android:text="@string/borrar"
                android:layout_width="181dp"
                android:layout_height="66dp"
                android:id="@+id/cmdBorrar" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
